# potto

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pygeoapi-config-example.yml  pyproject.toml  uvicorn-log-config-example.yml  uvicorn-log-config-no-db.yml  zensical.toml
.github/workflows/: ci.yaml  docs.yml
docker/: compose.ci.yaml  compose.dev.yaml
docker/opa/policies/: potto.rego
docs/: development.md  index.md  motivation.md
spectral/: spectral.yaml
spectral/owasp-top10/: .spectral.json
spectral/owasp-top10/functions/: check-security.js  oasExample.js  serverVariables.js
src/potto/: __main__.py  config.py  constants.py  exceptions.py  jinjafilters.py  permissions.py  protocols.py  retrievers.py  util.py  wrapper.py
src/potto/auth/: backend.py  jwt.py  oidc.py
src/potto/authn/: backend.py  jwt.py  oidc.py
src/potto/authorization/: backend.py  opa.py
src/potto/authz/: backend.py  base.py  opa.py
src/potto/cliapp/: __main__.py  admin.py  app.py  collections.py  db.py  main.py  metadata.py  users.py
src/potto/db/: engine.py  models.py
src/potto/db/commands/: __init__.py  auth.py  collections.py  metadata.py
src/potto/db/migrations/: env.py  script.py.mako
src/potto/db/migrations/versions/: 2026_02_24_2143-e0ab3140c12b_initial.py  2026_02_25_1511-66509fa811f1_added_spatial_extent_to_collection.py  2026_03_05_1500-01ec4d641256_initial.py  (+18 more)
src/potto/db/queries/: __init__.py  auth.py  collections.py  common.py  metadata.py
src/potto/operations/: auth.py  collections.py  config.py  metadata.py
src/potto/pygeoapi_providers/: __init__.py  base.py  config.py  protocols.py
src/potto/schemas/: auth.py  base.py  collections.py  items.py  metadata.py  potto.py  pygeoapi_config.py  web.py
src/potto/schemas/cli/: __init__.py  admin.py  auth.py  base.py  collections.py  metadata.py
src/potto/schemas/web/: __init__.py  base.py  collections.py  items.py  landing.py
src/potto/webapp/: app.py  main.py  protocols.py  requests.py  state.py  util.py
src/potto/webapp/admin/: auth.py  fields.py  main.py  views.py
src/potto/webapp/api/: dependencies.py  main.py
src/potto/webapp/routes/: auth.py  landing.py  ogcapi_common.py  ogcapi_features.py
src/potto/webapp/templates/: _base.html  _old_base.html  landing-page.html  landing_page.html  old_landing_page.html
src/pygeoapi_starlette/: config.py  pygeoapi.py  pygeoapi_config.py
src/pygeoapi_starlette/cliapp/: __main__.py  app.py
src/pygeoapi_starlette/webapp/: app.py  requests.py  util.py
src/pygeoapi_starlette/webapp/routes/: base.py  ogcapi_common.py  ogcapi_features.py  ogcapi_tiles.py
src/pygeoapi_starlette/webapp/templates/: _base.html  landing_page.html
tests/: conftest.py  test_api_collection_items.py  test_api_collections.py  test_commands_collections.py
(+24 files in other folders)
